[metadata]
name = blrec
version = attr: blrec.__version__
description = Bilibili Live Streaming Recorder
long_description = file: README.md
long_description_content_type = text/markdown
keywords = bilibili, live, danmaku, recorder
license = GPLv3
license_file = LICENSE
author = acgnhiki
author_email = acgnhiki@outlook.com
url = https://github.com/acgnhiki/blrec
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Topic :: Internet
    Topic :: Multimedia :: Video
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Typing :: Typed

[options]
packages = find:
package_dir =
    =src
include_package_data = True
python_requires = >= 3.8
install_requires =
    typing-extensions >= 3.10.0.0
    fastapi >= 0.65.2, < 0.66.0
    email_validator >=1.1.2, < 2.0.0
    typer >= 0.3.2, < 0.4.0
    aiohttp >= 3.6.2, < 3.7.0
    requests >= 2.24.0, < 2.25.0
    aiofiles >= 0.5.0, < 0.6.0
    tenacity >= 6.2.0, < 6.3.0
    colorama >= 0.4.3, < 0.5.0
    humanize >= 3.2.0, < 3.3.0
    tqdm >= 4.56.2, < 4.57.0
    attrs >= 21.2.0, < 21.3.0
    lxml >= 4.6.2, < 4.7.0
    toml >= 0.10.2, < 0.11.0
    psutil >= 5.8.0, < 5.9.0
    rx >= 3.1.1, < 3.2.0
    bitarray >= 2.2.5, < 2.3.0
    uvicorn[standard] >=0.12.0, < 0.15.0

[options.extras_require]
    dev =
        flake8 >= 3.9.2, < 4.0.0
        mypy >= 0.910, < 1.000

        setuptools >= 57.0.0, < 58.0.0
        wheel >= 0.37, < 0.38.0
        build >= 0.5.1, < 0.6.0

        # missing stub packages
        types-requests >= 2.25.1, < 2.26.0
        types-aiofiles >= 0.1.7, < 0.2.0
        types-toml >= 0.1.3, < 0.2.0
        types-setuptools >= 57.0.0, < 58.0.0

    speedups = aiohttp[speedups] >= 3.6.2, < 3.7.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    blrec = blrec.cli.main:main
