[metadata]
name = blrec
version = attr: blrec.__version__
description = Bilibili Live Streaming Recorder
long_description = file: README.md
long_description_content_type = text/markdown
keywords = bilibili, live, danmaku, recorder
license = GPLv3
license_file = LICENSE
author = acgnhiki
author_email = acgnhiki@outlook.com
url = https://github.com/acgnhiki/blrec
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Topic :: Internet
    Topic :: Multimedia :: Video
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Typing :: Typed

[options]
packages = find:
package_dir =
    =src
include_package_data = True
python_requires = >= 3.8
install_requires =
    python-liquid >= 1.2.1, < 2.0.0
    typing-extensions >= 3.10.0.0
    ordered-set >= 4.1.0, < 5.0.0
    fastapi >= 0.70.0, < 0.71.0
    email_validator >= 1.1.3, < 2.0.0
    click < 8.1.0
    typer >= 0.4.1, < 0.5.0
    aiohttp >= 3.8.1, < 4.0.0
    requests >= 2.24.0, < 3.0.0
    aiofiles >= 0.8.0, < 0.9.0
    tenacity >= 8.0.1, < 9.0.0
    colorama >= 0.4.4, < 0.5.0
    humanize >= 3.13.1, < 4.0.0
    tqdm >= 4.62.3, < 5.0.0
    attrs >= 21.2.0, < 22.0.0
    lxml >= 4.6.4, < 5.0.0
    toml >= 0.10.2, < 0.11.0
    m3u8 >= 1.0.0, < 2.0.0
    av >= 10.0.0, < 11.0.0
    jsonpath == 0.82
    psutil >= 5.8.0, < 6.0.0
    reactivex >= 4.0.0, < 5.0.0
    bitarray >= 2.2.5, < 3.0.0
    brotli >= 1.0.9, < 2.0.0
    uvicorn[standard] >= 0.15.0, < 0.16.0

[options.extras_require]
    dev =
        flake8 >= 4.0.1
        mypy == 0.910  # https://github.com/samuelcolvin/pydantic/issues/3528
        isort >= 5.10.1
        black >= 22.3.0
        autoflake >= 1.4

        setuptools >= 59.4.0
        wheel >= 0.37
        build >= 0.7.0
        twine >= 3.7.1

        # missing stub packages
        types-requests >= 2.26.1
        types-aiofiles >= 0.1.7
        types-toml >= 0.10.1
        types-setuptools >= 57.4.4

    speedups = aiohttp[speedups] >= 3.8.1, < 4.0.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    blrec = blrec.cli.main:main
